--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ exclude = [".gitignore", "ios-tests/**", "xtests/**"]
 
 [features]
 exception = ["objc_exception"]
+gnustep_runtime = []
 
 [dependencies]
 libc = "0.1"
