--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "objc"
 version = "0.1.6"
 authors = ["Steven Sheldon"]
+build = "build.rs"
 
 description = "Objective-C Runtime bindings and wrapper for Rust."
 keywords = ["objective-c", "osx", "ios", "cocoa", "uikit"]
@@ -14,7 +15,7 @@ exclude = [".gitignore", "ios-tests/**", "xtests/**"]
 
 [features]
 exception = ["objc_exception"]
-gnustep_runtime = []
+gnustep_runtime = [ "gcc" ]
 
 [dependencies]
 libc = "0.1"
@@ -22,4 +23,8 @@ malloc_buf = "0.0"
 
 [dependencies.objc_exception]
 version = "0.0"
+optional = true
+
+[build-dependencies.gcc]
+git = "https://github.com/ngrewe/gcc-rs.git"
 optional = true
