Changes to the gcc crate were merged (cf. alexcrichton/gcc-rs#54)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,5 @@ version = "0.0"
 optional = true
 
 [build-dependencies.gcc]
-git = "https://github.com/ngrewe/gcc-rs.git"
+git = "https://github.com/alexcrichton/gcc-rs.git"
 optional = true
