--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,5 @@ version = "0.0"
 optional = true
 
 [build-dependencies.gcc]
-git = "https://github.com/alexcrichton/gcc-rs.git"
-rev = "a7bcbe58c605493f769bf45a858d99f4a9926dc1"
+version = "0.3.14"
 optional = true
