--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,6 @@
 name = "objc"
 version = "0.1.7"
 authors = ["Steven Sheldon"]
-build = "build.rs"
 
 description = "Objective-C Runtime bindings and wrapper for Rust."
 keywords = ["objective-c", "osx", "ios", "cocoa", "uikit"]
@@ -15,7 +14,7 @@ exclude = [".gitignore", ".travis.yml", "ios-tests/**", "xtests/**"]
 
 [features]
 exception = ["objc_exception"]
-gnustep_runtime = [ "gcc" ]
+gnustep_runtime = [ "test_ns_object/gnustep" ]
 
 [dependencies]
 libc = "0.1"
@@ -25,6 +24,6 @@ malloc_buf = "0.0"
 version = "0.0"
 optional = true
 
-[build-dependencies.gcc]
-version = "0.3.14"
-optional = true
+[dev-dependencies.test_ns_object]
+version = "0.0"
+path = "test_utils"
